--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "zod": "^3.21.4"
   },
