--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
     "start": "next start"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.3.1",
+    "@t3-oss/env-nextjs": "^0.4.1",
+    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
-    "next": "^13.4.2",
+    "next": "^13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.2.0",
-    "react-query": "^3.39.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.16.0",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/eslint": "^8.40.2",
+    "@types/node": "^18.16.18",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.2",
-    "postcss": "^8.4.21",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.4"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.14.0"
